--- a/nginx.conf
+++ b/nginx.conf
@@ -1,20 +1,26 @@
-events {
-
-}
-
 http {
+	ssl_session_cache   shared:SSL:10m;
+	ssl_session_timeout 10m;
+	server {
+		listen 80 default_server;
+    		server_name _;
+		return 301 https://$host$request_uri;
+	}
 	server
 	{
 		listen 443 ssl;
 		listen [::]:443 ssl;
 		ssl_certificate ./certs/domain.pem;
 		ssl_certificate_key ./certs/domain-key.pem;
-		server_name ndp-api.local;
+		server_name fablo-api.local;
+		keepalive_timeout 70;
 
 		location / {
 			proxy_pass http://backend:8000;
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
+			proxy_ssl_session_reuse on;
+			proxy_socket_keepalive on;
 		}
 	}
 }
